# cml-mcp

./: .dockerignore  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CISCO_LICENSE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FORK_MAINTENANCE.md  INSTALLATION.md  Justfile  LICENSE  README.md  acl.yaml.example  conftest.py  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  pytest.ini  server.json
.github/workflows/: docker.yml  docs.yml
docs/: api-reference.md  architecture.md  configuration.md  development.md  docker.md  implementation-multi-server.md  index.md  schemas.md  transport-modes.md  user-guide.md
examples/skill/: INSTALL.md
examples/skill/cml/: SKILL.md
examples/skill/cml/references/: annotations-and-layout.md  node_selection_guidance.md  operations.md  topology-schema.md
examples/skill/cml/scripts/: base_config.py
scripts/: test_http_e2e.py
src/cml_mcp/: __init__.py  __main__.py  client_pool.py  cml_client.py  server.py  settings.py  types.py
src/cml_mcp/cml/simple_common/: constants.py  models.py  schemas.py
src/cml_mcp/cml/simple_core/common/: events.py  states.py  type_hints.py
src/cml_mcp/cml/simple_webserver/: __init__.py
src/cml_mcp/cml/simple_webserver/schemas/: __init__.py  ai.py  annotations.py  api_versioning.py  authentication.py  common.py  diagnostics.py  external_connector.py  groups.py  image_definitions.py  imports.py  int_compute.py  interfaces.py  internals.py  keys.py  labs.py  licensing.py  licensing_reservation.py  links.py  network_addresses.py  node_definitions.py  nodes.py  parameters.py  pcap.py  pyats.py  resource_pools.py  responses.py  sample_labs.py  smart_annotations.py  system.py  telemetry.py  topologies.py  ui_helpers.py  users.py  web_sockets.py  wireless.py
src/cml_mcp/schemas/: LICENSE  annotations.py  authentication.py  common.py  external_connector.py  groups.py  image_definitions.py  imports.py  int_compute.py  interfaces.py  keys.py  labs.py  licensing.py  licensing_reservation.py  links.py  network_addresses.py  node_definitions.py  nodes.py  parameters.py  pcap.py  resource_pools.py  responses.py  sample_labs.py  smart_annotations.py  system.py  topologies.py  users.py  web_sockets.py
src/cml_mcp/schemas/simple_common/: constants.py  models.py
src/cml_mcp/schemas/simple_core/common/: events.py  type_hints.py
src/cml_mcp/tools/: __init__.py  annotations.py  cache.py  cli.py  dependencies.py  interfaces.py  labs.py  links.py  middleware.py  model_helpers.py  node_definitions.py  nodes.py  pcap.py  system.py  unicon_cli.py  users_groups.py
tests/: MOCK_FRAMEWORK.md  QUICK_START.md  README.md  __init__.py  conftest.py  test_cache.py  test_client_pool.py  test_cml_mcp.py  test_cml_mcp_compat.py  test_e2e_multiserver.py  test_middleware_integration.py  test_schema_drift.py  test_settings.py  test_tool_functions.py
tests/input_data/: IOL_OSPF_Lab.yaml
tests/mocks/: check_packet_capture_status.json  download_lab_topology.json  get_all_links_for_lab.json  get_annotations_for_cml_lab.json  get_captured_packet_overview.json  get_cml_info.json  get_cml_lab_by_title.json  get_cml_licensing_details.json  get_cml_statistics.json  get_cml_status.json  get_groups.json  get_interfaces_for_node.json  get_labs.json  get_node_def_detail.json  get_node_defs.json  get_nodes_for_cml_lab.json  get_users.json
