[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "cml-mcp"
version = "0.14.3"
license = "BSD-2-Clause AND LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Joe Clarke", email = "jclarke@cisco.com" }]
description = "Cisco Modeling Labs (CML) MCP Server"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "fastmcp>=2.13.1",
    "fastapi",
    "pydantic_strict_partial",
    "typer",
    "virl2_client",
]
optional-dependencies = { "pyats" = [
    "pyats",
    "genie",
] }

[project.scripts]
cml-mcp = "cml_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/xorrkaz/cml-mcp"
Issues = "https://github.com/xorrkaz/cml-mcp/issues"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
line_length = 140

[tool.flake8]
max-line-length = 140
extend-ignore = ["E203", "W503"]

[tool.uv.sources]
cml-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.0",
]

[tool.poetry]
name = "cml-mcp"
version = "0.14.3"
description = "Cisco Modeling Labs (CML) MCP Server"
authors = ["Joe Clarke <jclarke@cisco.com>"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{include = "cml_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
httpx = "*"
fastmcp = ">=2.13.1"
fastapi = "*"
pydantic_strict_partial = "*"
typer = "*"
virl2_client = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-cov = "*"
pre-commit = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocs-mermaid2-plugin = ">=1.1"
pymdown-extensions = ">=10.0"

[tool.poetry.extras]
pyats = ["pyats", "genie"]
