[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "cml-mcp"
version = "0.21.0"
license = "BSD-2-Clause AND LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Joe Clarke", email = "jclarke@cisco.com" }]
description = "Cisco Modeling Labs (CML) MCP Server"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "fastmcp>=2.13.1",
    "fastapi",
    "pydantic_strict_partial",
    "typer",
    "virl2_client",
]
optional-dependencies = { "pyats" = [
    "pyats",
    "genie",
] }

[project.scripts]
cml-mcp = "cml_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/xorrkaz/cml-mcp"
Issues = "https://github.com/xorrkaz/cml-mcp/issues"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"
line_length = 140

[tool.flake8]
max-line-length = 140
extend-ignore = ["E203", "W503"]

[tool.uv.sources]
cml-mcp = { workspace = true }

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "inline-snapshot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"
asyncio_default_test_loop_scope="session"
log_cli = true