[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "cml-mcp"
version = "0.24.0"
license = "BSD-2-Clause AND LicenseRef-Proprietary"
license-files = ["LICENSE", "CISCO_LICENSE.md"]
authors = [{ name = "Joe Clarke", email = "jclarke@cisco.com" }]
description = "Cisco Modeling Labs (CML) MCP Server"
requires-python = ">=3.12,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
    "fastmcp>=2.13.1,<3.0.0",
    "fastapi",
    "pydantic_strict_partial",
    "typer",
    "virl2_client",
]
optional-dependencies = { "pyats" = [
    "pyats",
    "genie",
] }

[project.scripts]
cml-mcp = "cml_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/xorrkaz/cml-mcp"
Issues = "https://github.com/xorrkaz/cml-mcp/issues"

[tool.black]
line-length = 140
force-exclude = '''
^/src/cml_mcp/cml/
'''

[tool.isort]
profile = "black"
line_length = 140
skip_glob = ["src/cml_mcp/cml/**"]

[tool.uv.sources]
cml-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio", 
    "inline-snapshot[black]",
    "black",
    "isort",
    "flake8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"
asyncio_default_test_loop_scope="session"
log_cli = true